# adboard-api

./: . gitignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ads/: admin.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_owner_review_owner.py
ads/tests/: test_ads.py
config/: settings.py  settings_test.py  urls.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/tests/: test_ads.py  test_users.py
